--- a/style.css
+++ b/style.css
@@ -201,10 +201,16 @@ p a {
   align-items: center;
   justify-content: center;
 }
-#form input, #form select {
+#form input {
   height: 30px;
   padding: 15px;
   outline: none;
+  font-size: 1.1em;
+  font-family: 'Epliogue';
+}
+#form select {
+  height: 30px;
+  font-family: 'Epliogue';
   font-size: 1.1em;
 }
 #form button {
